--- a/index.html
+++ b/index.html
@@ -92,9 +92,12 @@
                     Yeah I don't know anything but I am mad about you. <br>
 
                     It is just you who is.. <br>
-                    My desire, <br>
-                    My goal, <br>
-                    My angel, <br>
+                    My Desire, <br>
+                    My Goal, <br>
+                    My Angel, <br>
+                    My Hamdam, <br>
+                    My Saathiya, <br>
+                    My Hamsafar, <br>
                     my U, <br>
                     My Udaya, <br>
                     My Baby, <br>
